Fixed minor keyboard and layout issues, improved the behavior of AlertDialogs that contain editable views, added a new "Information" button

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -318,5 +318,6 @@
     <string name="headset_hook_2">Zwei Klicks auf der Kopfhörertaste:</string>
     <string name="headset_hook_3">Drei Klicks auf der Kopfhörertaste:</string>
     <string name="nothing">Nichts</string>
+    <string name="path">Pfad</string>
 
 </resources>
