--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -318,5 +318,6 @@
     <string name="headset_hook_2">Deux clics sur le bouton de l\'écouteur:</string>
     <string name="headset_hook_3">Trois clics sur le bouton de l\'écouteur:</string>
     <string name="nothing">Rien</string>
+    <string name="path">Chemin</string>
 
 </resources>
