--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -318,5 +318,6 @@
     <string name="headset_hook_2">Dos toques sobre la tecla del auricular:</string>
     <string name="headset_hook_3">Tres toques sobre la tecla del auricular:</string>
     <string name="nothing">Nada</string>
+    <string name="path">Ruta</string>
 
 </resources>
