Adding SHOUTcast support

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -319,5 +319,6 @@
     <string name="headset_hook_3">Trois clics sur le bouton de l\'écouteur:</string>
     <string name="nothing">Rien</string>
     <string name="path">Chemin</string>
+    <string name="radio_directory">Répertoire de la radio online</string>
 
 </resources>
