--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -319,5 +319,6 @@
     <string name="headset_hook_3">Три щелчка на кнопке гарнитуры:</string>
     <string name="nothing">Ничего</string>
     <string name="path">Путь</string>
+    <string name="radio_directory">Каталог интернет радио</string>
 
 </resources>
