--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -319,5 +319,6 @@
     <string name="headset_hook_3">Drei Klicks auf der Kopfhörertaste:</string>
     <string name="nothing">Nichts</string>
     <string name="path">Pfad</string>
+    <string name="radio_directory">Online Radio Verzeichnis</string>
 
 </resources>
