--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -319,5 +319,6 @@
     <string name="headset_hook_3">Tres toques sobre la tecla del auricular:</string>
     <string name="nothing">Nada</string>
     <string name="path">Ruta</string>
+    <string name="radio_directory">Directorio de radios online</string>
 
 </resources>
