Adding SHOUTcast support and refactoring both RadioStationList and ActivityBrowserRadio

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -320,5 +320,6 @@
     <string name="nothing">Nichts</string>
     <string name="path">Pfad</string>
     <string name="radio_directory">Online Radio Verzeichnis</string>
+    <string name="all_kinds">Alle Arten</string>
 
 </resources>
