--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -320,5 +320,6 @@
     <string name="nothing">Rien</string>
     <string name="path">Chemin</string>
     <string name="radio_directory">Répertoire de la radio online</string>
+    <string name="all_kinds">Tout types</string>
 
 </resources>
