--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -321,5 +321,6 @@
     <string name="nothing">Nothing</string>
     <string name="path">Path</string>
     <string name="radio_directory">Online radio directory</string>
+    <string name="all_kinds">All kinds</string>
 
 </resources>
