--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -320,5 +320,6 @@
     <string name="nothing">Nada</string>
     <string name="path">Caminho</string>
     <string name="radio_directory">Diretório de rádios online</string>
+    <string name="all_kinds">Todos os tipos</string>
 
 </resources>
