--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -321,5 +321,6 @@
     <string name="path">Путь</string>
     <string name="radio_directory">Каталог интернет радио</string>
     <string name="all_kinds">Все типы</string>
+    <string name="listeners">Слушатели</string>
 
 </resources>
