--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -321,5 +321,6 @@
     <string name="path">Шлях</string>
     <string name="radio_directory">Каталог інтернет радіо</string>
     <string name="all_kinds">Всі типи</string>
+    <string name="listeners">Слухачі</string>
 
 </resources>
