--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -321,5 +321,6 @@
     <string name="path">Pfad</string>
     <string name="radio_directory">Online Radio Verzeichnis</string>
     <string name="all_kinds">Alle Arten</string>
+    <string name="listeners">Zuhörer</string>
 
 </resources>
