--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -322,5 +322,6 @@
     <string name="radio_directory">Répertoire de la radio online</string>
     <string name="all_kinds">Tout types</string>
     <string name="listeners">Auditeurs</string>
+    <string name="connecting">Connexion…</string>
 
 </resources>
