--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -323,5 +323,6 @@
     <string name="radio_directory">Online radio directory</string>
     <string name="all_kinds">All kinds</string>
     <string name="listeners">Listeners</string>
+    <string name="connecting">Connecting…</string>
 
 </resources>
