--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -322,5 +322,6 @@
     <string name="radio_directory">Online Radio Verzeichnis</string>
     <string name="all_kinds">Alle Arten</string>
     <string name="listeners">Zuhörer</string>
+    <string name="connecting">Connecting…</string>
 
 </resources>
