--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -322,5 +322,6 @@
     <string name="radio_directory">Каталог интернет радио</string>
     <string name="all_kinds">Все типы</string>
     <string name="listeners">Слушатели</string>
+    <string name="connecting">Подключение…</string>
 
 </resources>
