--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -322,5 +322,6 @@
     <string name="radio_directory">Каталог інтернет радіо</string>
     <string name="all_kinds">Всі типи</string>
     <string name="listeners">Слухачі</string>
+    <string name="connecting">Підключення…</string>
 
 </resources>
