--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -244,7 +244,7 @@
     <string name="opengl_error">OpenGL Fehler</string>
     <string name="opengl_not_supported">Keine Unterstützung für OpenGL ES 2.0</string>
     <string name="speed">Geschwindigkeit</string>
-    <string name="add_radio">Radio</string>
+    <string name="radio">Radio</string>
     <string name="search">Suchen</string>
     <string name="genre">Genre</string>
     <string name="search_term">Suchbegriff</string>
@@ -323,5 +323,9 @@
     <string name="all_kinds">Alle Arten</string>
     <string name="listeners">Zuhörer</string>
     <string name="connecting">Connecting…</string>
+    <string name="bytes_before_decoding">Starten Sie die Decodierung nach dem Download wie viele Bytes:</string>
+    <string name="seconds_before_playback">Starten Sie die Wiedergabe nach der Decodierung wie viele Sekunden:</string>
+    <string name="second">Sekunde</string>
+    <string name="seconds">Sekunden</string>
 
 </resources>
