--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -244,7 +244,7 @@
     <string name="opengl_error">OpenGL помилку</string>
     <string name="opengl_not_supported">OpenGL ES 2.0 не дозволені</string>
     <string name="speed">Швидкість</string>
-    <string name="add_radio">Радіо</string>
+    <string name="radio">Радіо</string>
     <string name="search">Шукати</string>
     <string name="genre">Жанр</string>
     <string name="search_term">Критерії пошуку</string>
@@ -323,5 +323,9 @@
     <string name="all_kinds">Всі типи</string>
     <string name="listeners">Слухачі</string>
     <string name="connecting">Підключення…</string>
+    <string name="bytes_before_decoding">Почати декодування після завантаження скільки байт:</string>
+    <string name="seconds_before_playback">Початок відтворення через декодування скільки секунд:</string>
+    <string name="second">секунда</string>
+    <string name="seconds">секунди</string>
 
 </resources>
