--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -245,7 +245,7 @@
     <string name="opengl_error">OpenGL error</string>
     <string name="opengl_not_supported">No support for OpenGL ES 2.0</string>
     <string name="speed">Speed</string>
-    <string name="add_radio">Radio</string>
+    <string name="radio">Radio</string>
     <string name="search">Search</string>
     <string name="genre">Genre</string>
     <string name="search_term">Search term</string>
@@ -324,5 +324,9 @@
     <string name="all_kinds">All kinds</string>
     <string name="listeners">Listeners</string>
     <string name="connecting">Connecting…</string>
+    <string name="bytes_before_decoding">Bytes to download before starting to decode:</string>
+    <string name="seconds_before_playback">Seconds to decode before starting the playback:</string>
+    <string name="second">second</string>
+    <string name="seconds">seconds</string>
 
 </resources>
