Fixed a bug when displaying the widget's label when it was shown without actually running the app

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -161,15 +161,17 @@
     <string name="external_storage">Externer Speicher</string>
     <string name="usb_storage">USB Speicher</string>
     <string name="error_connection">Keine Internetverbindung :(</string>
-    <string name="error_gen">Tut mir leid aber etwas ist schief gelaufen :(</string>
-    <string name="error_playback">Tut mir leid aber etwas ist schief gelaufen während der Wiedergabe :(</string>
-    <string name="error_msg">Tut mir leid aber etwas ist schief gelaufen während der Wiedergabe:</string>
-    <string name="error_state">Die Wiedergabe wurde gestoppt, denn der Player hat falsch reagiert :(</string>
-    <string name="error_io">Ein Zugriffsproblem ist während der Wiedergabe aufgetreten :(</string>
-    <string name="error_file_not_found">Die Datei wurde nicht gefunden :(</string>
-    <string name="error_timeout">Die Zeit für den Zugriff auf die Songdaten ist abgelaufen während der Wiedergabe :(</string>
-    <string name="error_server_died">Der Medienserver hat während der Wiedergabe plötzlich nicht mehr reagiert :(</string>
-    <string name="error_security">Ein Sicherheitsproblem ist während der Wiedergabe aufgetreten :(</string>
+    <string name="error_gen">Tut mir leid! Etwas ist schiefgelaufen :(</string>
+    <string name="error_playback">Tut mir leid! Etwas ist schiefgelaufen während der Wiedergabe :(</string>
+    <string name="error_msg">Tut mir leid! Etwas ist schiefgelaufen während der Wiedergabe:</string>
+    <string name="error_state">Tut mir leid! Die Wiedergabe wurde gestoppt, denn der Player hat falsch reagiert :(</string>
+    <string name="error_io">Tut mir leid! Es gab ein Problem beim Auslesen der Audiodaten :(</string>
+    <string name="error_file_not_found">Tut mir leid! Die Datei wurde nicht gefunden :(</string>
+    <string name="error_server_not_found">Tut mir leid! Die Server wurde nicht gefunden :(</string>
+    <string name="error_timeout">Tut mir leid! Die Zeit für den Zugriff auf die Audiodaten ist abgelaufen :(</string>
+    <string name="error_server_died">Tut mir leid! Der Medienserver hat während der Wiedergabe plötzlich nicht mehr reagiert :(</string>
+    <string name="error_security">Tut mir leid! Ein Sicherheitsproblem ist aufgetreten :(</string>
+    <string name="error_unsupported_format">Tut mir leid! Diese Audiocodec wird nicht unterstützt! :(</string>
     <string name="coming_soon">Kommt bald&#8230; ;)</string>
     <string name="blue_orange">Blau/Orange</string>
     <string name="blue">Blau</string>
