--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -161,15 +161,17 @@
     <string name="external_storage">Almacenamiento Externo</string>
     <string name="usb_storage">Almacenamiento USB</string>
     <string name="error_connection">No hay acceso a internet :(</string>
-    <string name="error_gen">Lo sentimos, ha ocurrido un error :(</string>
-    <string name="error_playback">Lo sentimos, ha ocurrido un error durante la reproducción :(</string>
-    <string name="error_msg">Lo sentimos, ha ocurrido un error durante la reproducción:</string>
-    <string name="error_state">Lo sentimos, la reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor :(</string>
-    <string name="error_io">Lo sentimos, la reproducción tuvo que ser interrumpida debido a que el reproductor ha tenido un fallo :(</string>
-    <string name="error_file_not_found">Lo sentimos, el archivo no se pudo localizar :(</string>
-    <string name="error_timeout">Lo sentimos, el tiempo de acceso ha expirado durante la reproducción :(</string>
-    <string name="error_server_died">Lo sentimos, el servidor de medio ha muerto durante la reproducción :(</string>
-    <string name="error_security">Lo sentimos, ha ocurrido un problema de seguridad durante la reproducción :(</string>
+    <string name="error_gen">Lo sentimos! Ha ocurrido un error :(</string>
+    <string name="error_playback">Lo sentimos! Ha ocurrido un error durante la reproducción :(</string>
+    <string name="error_msg">Lo sentimos! Ha ocurrido un error durante la reproducción:</string>
+    <string name="error_state">Lo sentimos! La reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor :(</string>
+    <string name="error_io">Lo sentimos! La reproducción tuvo que ser interrumpida debido a que el reproductor ha tenido un fallo :(</string>
+    <string name="error_file_not_found">Lo sentimos! No fue posible encontrar el archivo :(</string>
+    <string name="error_server_not_found">Lo sentimos! No fue posible encontrar el servidor :(</string>
+    <string name="error_timeout">Lo sentimos! El tiempo de acceso ha expirado :(</string>
+    <string name="error_server_died">Lo sentimos! El servidor de medio ha muerto :(</string>
+    <string name="error_security">Lo sentimos! Ha ocurrido un problema de seguridad :(</string>
+    <string name="error_unsupported_format">Lo sentimos! Este códec de audio no es compatible :(</string>
     <string name="coming_soon">Próximamente&#8230; ;)</string>
     <string name="blue_orange">Azul/Naranja</string>
     <string name="blue">Azul</string>
