--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -161,15 +161,17 @@
     <string name="external_storage">Mémoire externe</string>
     <string name="usb_storage">Stockage USB</string>
     <string name="error_connection">Pas de connexion internet :(</string>
-    <string name="error_gen">Désolé, quelque chose s\'est mal passé :(</string>
-    <string name="error_playback">Désolé, quelque chose s\'est mal passé pendant la lecture :(</string>
-    <string name="error_msg">Désolé, quelque chose s\'est mal passé pendant la lecture :</string>
-    <string name="error_state">Désolé, la lecture a dû être arrêtée car le lecteur s\'est mal comporté :(</string>
-    <string name="error_io">Désolé, il y a eu un problème d\'accès aux données pendant la lecture :(</string>
-    <string name="error_file_not_found">Désolé, le fichier est introuvable :(</string>
-    <string name="error_timeout">Désolé, le temps d\'accès aux données du morceaux a été trop long pendant la lecture :(</string>
-    <string name="error_server_died">Désolé, le serveur du média est subitement mort :(</string>
-    <string name="error_security">Désolé, il y a eu un problème de sécurité pendant la lecture :(</string>
+    <string name="error_gen">Désolé! Quelque chose s\'est mal passé :(</string>
+    <string name="error_playback">Désolé! Quelque chose s\'est mal passé pendant la lecture :(</string>
+    <string name="error_msg">Désolé! Tuelque chose s\'est mal passé pendant la lecture:</string>
+    <string name="error_state">Désolé! La lecture a dû être arrêtée car le lecteur s\'est mal comporté :(</string>
+    <string name="error_io">Désolé! Il y a eu un problème d\'accès aux données pendant la lecture :(</string>
+    <string name="error_file_not_found">Désolé! Le fichier est introuvable :(</string>
+    <string name="error_server_not_found">Désolé! Le serveur est introuvable :(</string>
+    <string name="error_timeout">Désolé! Le temps d\'accès aux données du morceaux a été trop long pendant la lecture :(</string>
+    <string name="error_server_died">Désolé! Le serveur du média est subitement mort :(</string>
+    <string name="error_security">Désolé! Il y a eu un problème de sécurité pendant la lecture :(</string>
+    <string name="error_unsupported_format">Désolé! Ce codec audio sera pas supporté :(</string>
     <string name="coming_soon">C\'est pour bientôt&#8230; ;)</string>
     <string name="blue_orange">Bleu/Orange</string>
     <string name="blue">Bleu</string>
