--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -52,7 +52,7 @@
     <string name="opt_is_divider_visible">Mostrar divisão entre os itens das listas</string>
     <string name="opt_is_vertical_margin_large">Usar espaçamento largo entre os itens das listas</string>
     <string name="opt_handle_call_key">Usar a tecla Chamar/Discar como Tocar/Pausar</string>
-    <string name="opt_do_not_attenuate_volume">Não atenuar o volume da música quando ocorrer alguma notificação do sistema</string>
+    <string name="opt_do_not_attenuate_volume">Não atenuar o volume da música quando acontecer alguma notificação do sistema</string>
     <string name="opt_play_when_headset_plugged">Tocar automaticamente quando um fone de ouvido com fio for conectado</string>
     <string name="opt_block_back_key">Impedir que a tecla Voltar retorne à tela inicial</string>
     <string name="opt_double_click_mode">Usar dois cliques/toques para tocar as músicas da lista</string>
@@ -161,15 +161,17 @@
     <string name="external_storage">Armazenamento externo</string>
     <string name="usb_storage">Armazenamento USB</string>
     <string name="error_connection">Sem conexão com a Internet :(</string>
-    <string name="error_gen">Desculpe, mas algo saiu errado :(</string>
-    <string name="error_playback">Desculpe, mas algo saiu errado durante a reprodução :(</string>
-    <string name="error_msg">Desculpe, mas algo saiu errado durante a reprodução:</string>
-    <string name="error_state">Desculpe, mas a reprodução teve que ser interrompida pois o player se comportou mal :(</string>
-    <string name="error_io">Desculpe, mas ocorreu um problema de acesso a dados durante a reprodução :(</string>
-    <string name="error_file_not_found">Desculpe, mas o arquivo não foi encontrado :(</string>
-    <string name="error_timeout">Desculpe, mas o tempo para acessar os dados expirou durante a reprodução :(</string>
-    <string name="error_server_died">Desculpe, mas o servidor de mídia morreu de repente durante a reprodução :(</string>
-    <string name="error_security">Desculpe, mas ocorreu um problema de segurança durante a reprodução :(</string>
+    <string name="error_gen">Desculpe! Algo saiu errado :(</string>
+    <string name="error_playback">Desculpe! Algo saiu errado com a reprodução :(</string>
+    <string name="error_msg">Desculpe! Algo saiu errado com a reprodução:</string>
+    <string name="error_state">Desculpe! A reprodução foi interrompida pois o player se comportou mal :(</string>
+    <string name="error_io">Desculpe! Houve um problema ao ler os dados do áudio :(</string>
+    <string name="error_file_not_found">Desculpe! Não foi possível encontrar o arquivo :(</string>
+    <string name="error_server_not_found">Desculpe! Não foi possível encontrar o servidor :(</string>
+    <string name="error_timeout">Desculpe! O tempo para acessar os dados do áudio expirou :(</string>
+    <string name="error_server_died">Desculpe! O servidor de mídia morreu de repente :(</string>
+    <string name="error_security">Desculpe! Houve um problema de segurança :(</string>
+    <string name="error_unsupported_format">Desculpe! Este codec de áudio não é suportado :(</string>
     <string name="coming_soon">Em breve&#8230; ;)</string>
     <string name="blue_orange">Azul/Laranja</string>
     <string name="blue">Azul</string>
@@ -296,11 +298,11 @@
     <string name="bt_stop">Parar transmissão</string>
     <string name="bt_vumeter">VU meter + detecção de BPM</string>
     <string name="bt_pairing">Por favor, tente conectar-se de novo depois de parear o dispositivo.</string>
-    <string name="bt_connection_error">Ocorreu um erro ao se conectar ao dispositivo Bluetooth :(</string>
-    <string name="bt_communication_error">Ocorreu um erro na comunicação com o dispositivo Bluetooth :(</string>
+    <string name="bt_connection_error">Houve um erro ao se conectar ao dispositivo Bluetooth :(</string>
+    <string name="bt_communication_error">Houve um erro na comunicação com o dispositivo Bluetooth :(</string>
     <string name="bt_needs_to_be_enabled">Você precisa habilitar o Bluetooth para poder prosseguir :(</string>
     <string name="bt_not_supported">Bluetooth não suportado :(</string>
-    <string name="bt_discovery_error">Ocorreu um erro na procura pelos dispositivos Bluetooth :(</string>
+    <string name="bt_discovery_error">Houve um erro na procura pelos dispositivos Bluetooth :(</string>
     <string name="bt_devices">Dispositivos Bluetooth</string>
     <string name="bt_connecting">Conectando-se ao seu dispositivo Bluetooth. Por favor, aguarde&#8230;</string>
     <string name="bt_scanning">Procurando por dispositivos Bluetooth&#8230;</string>
