--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -161,15 +161,17 @@
     <string name="external_storage">Внешняя память</string>
     <string name="usb_storage">USB память</string>
     <string name="error_connection">Нет доступа в Интернет :(</string>
-    <string name="error_gen">Извините, но что-то пошло не так :(</string>
-    <string name="error_playback">Извините, но что-то пошло не так во время воспроизведения :(</string>
-    <string name="error_msg">Извините, но что-то пошло не так во время воспроизведения:</string>
-    <string name="error_state">Извините, но воспроизведение было остановлено в связи с аварийным завершением работы плеера :(</string>
-    <string name="error_io">Извините, возникла проблема с доступом к данным во время воспроизведения :(</string>
-    <string name="error_file_not_found">Извините, но файл для проигрывания не найден :(</string>
-    <string name="error_timeout">Извините, но время доступа к данным истекло во время воспроизведения :(</string>
-    <string name="error_server_died">Извините, но медиа-сервер был аварийно остановлен во время воспроизведения :(</string>
-    <string name="error_security">Извините, но возникла проблема с безопасностью во время воспроизведения :(</string>
+    <string name="error_gen">Извините! Что-то пошло не так :(</string>
+    <string name="error_playback">Извините! Что-то пошло не так во время воспроизведения :(</string>
+    <string name="error_msg">Извините! Что-то пошло не так во время воспроизведения:</string>
+    <string name="error_state">Извините! Воспроизведение было остановлено в связи с аварийным завершением работы плеера :(</string>
+    <string name="error_io">Извините! Был проблема чтения аудио данных :(</string>
+    <string name="error_file_not_found">Извините! Файл не найден :(</string>
+    <string name="error_server_not_found">Извините! Сервер не найден :(</string>
+    <string name="error_timeout">Извините! Время доступа к данным истекло во время воспроизведения :(</string>
+    <string name="error_server_died">Извините! Медиа сервер внезапно умер :(</string>
+    <string name="error_security">Извините! Проблема безопасности случилось :(</string>
+    <string name="error_unsupported_format">Извините! Этот аудио кодек не поддерживается :(</string>
     <string name="coming_soon">Скоро&#8230; ;)</string>
     <string name="blue_orange">Сине-оранжевая</string>
     <string name="blue">Синяя</string>
