--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -161,15 +161,17 @@
     <string name="external_storage">Зовнішня пам\'ять</string>
     <string name="usb_storage">USB пам\'ять</string>
     <string name="error_connection">Немає доступу в Інтернет :(</string>
-    <string name="error_gen">Вибачте, але щось пішло не так :(</string>
-    <string name="error_playback">Вибачте, але щось пішло не так під час відтворення :(</string>
-    <string name="error_msg">Вибачте, але щось пішло не так під час відтворення:</string>
-    <string name="error_state">Вибачте, але відтворення було зупинено у зв\'язку з аварійним завершенням роботи плеєра :(</string>
-    <string name="error_io">Вибачте, виникла проблема з доступом до даних під час відтворення :(</string>
-    <string name="error_file_not_found">Вибачте, але файл для відтворення не знайдено :(</string>
-    <string name="error_timeout">Вибачте, але час доступу до даних минув під час відтворення :(</string>
-    <string name="error_server_died">Вибачте, але медіа-сервер був аварійно зупинений під час відтворення :(</string>
-    <string name="error_security">Вибачте, але виникла проблема з безпекою під час відтворення :(</string>
+    <string name="error_gen">Вибачте! Щось пішло не так :(</string>
+    <string name="error_playback">Вибачте! Щось пішло не так під час відтворення :(</string>
+    <string name="error_msg">Вибачте! Щось пішло не так під час відтворення:</string>
+    <string name="error_state">Вибачте! Відтворення було зупинено у зв\'язку з аварійним завершенням роботи плеєра :(</string>
+    <string name="error_io">Вибачте! Виникла проблема з доступом до даних під час відтворення :(</string>
+    <string name="error_file_not_found">Вибачте! Файл не знайдено :(</string>
+    <string name="error_server_not_found">Вибачте! Сервер не найден :(</string>
+    <string name="error_timeout">Вибачте! Час доступу до даних минув під час відтворення :(</string>
+    <string name="error_server_died">Вибачте! Медіа-сервер раптово помер :(</string>
+    <string name="error_security">Вибачте! Проблема безпеки сталося :(</string>
+    <string name="error_unsupported_format">Извините! Цей аудіо кодек не дозволені :(</string>
     <string name="coming_soon">Скоро&#8230; ;)</string>
     <string name="blue_orange">Синя/Помаранчева</string>
     <string name="blue">Синя</string>
