--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -162,15 +162,17 @@
     <string name="external_storage">External storage</string>
     <string name="usb_storage">USB storage</string>
     <string name="error_connection">No Internet connection :(</string>
-    <string name="error_gen">Sorry, but something went wrong :(</string>
-    <string name="error_playback">Sorry, but something went wrong during the playback :(</string>
-    <string name="error_msg">Sorry, but something went wrong during the playback:</string>
-    <string name="error_state">Sorry, but the playback had to be stopped because the player has misbehaved :(</string>
-    <string name="error_io">Sorry, but a data access problem has happened during the playback :(</string>
-    <string name="error_file_not_found">Sorry, but the file could not be found :(</string>
-    <string name="error_timeout">Sorry, but the time to access song data has expired during the playback :(</string>
-    <string name="error_server_died">Sorry, but the media server suddenly died during the playback :(</string>
-    <string name="error_security">Sorry, but a security problem has happened during the playback :(</string>
+    <string name="error_gen">Sorry! Something went wrong :(</string>
+    <string name="error_playback">Sorry! Something went wrong with the playback :(</string>
+    <string name="error_msg">Sorry! Something went wrong with the playback:</string>
+    <string name="error_state">Sorry! The playback was stopped because the player has misbehaved :(</string>
+    <string name="error_io">Sorry! There was a problem reading the audio data :(</string>
+    <string name="error_file_not_found">Sorry! The file could not be found :(</string>
+    <string name="error_server_not_found">Sorry! The server could not be found :(</string>
+    <string name="error_timeout">Sorry! The time to access the audio data has expired :(</string>
+    <string name="error_server_died">Sorry! The media server suddenly died :(</string>
+    <string name="error_security">Sorry! A security problem has happened :(</string>
+    <string name="error_unsupported_format">Sorry! This audio codec is not supported :(</string>
     <string name="coming_soon">Coming soon&#8230; ;)</string>
     <string name="blue_orange">Blue/Orange</string>
     <string name="blue">Blue</string>
