--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -256,7 +256,7 @@
     <string name="no_favorites">Ainda sem favoritas!\n\nMarque estações de rádio como favoritas para encontrá-las aqui :)</string>
     <string name="no_stations">Nenhuma estação de rádio encontrada :(\n\nToque aqui para ver suas estações favoritas :)</string>
     <string name="expand_seek_bar">Expandir a barra de busca antes de buscar</string>
-    <string name="by_dir_xiph_org">Por Icecast - &lt;a href=\"http://dir.xiph.org\"&gt;dir.xiph.org&lt;/a&gt;</string>
+    <string name="by_x">Por X</string>
     <string name="creamy">Creme</string>
     <string name="transition">Transição:</string>
     <string name="animations">Animações</string>
